# dumb-classic

./: CMakeLists.txt  pkg-config.pc.in  readme.txt  release.txt
docs/: dumb.txt  howto.txt  ptr.txt
include/: aldumb-classic.h  dumb-classic.h
include/internal/: aldumb-classic.h  dumb-classic.h  it.h
make/: Makefile.inc
src/allegro/: alplay.c  datduh.c  datit.c  datitq.c  datmod.c  datmodq.c  dats3m.c  dats3mq.c  datunld.c  datxm.c  datxmq.c  packfile.c
src/core/: atexit.c  duhlen.c  duhtag.c  dumbfile.c  loadduh.c  makeduh.c  rawsig.c  readduh.c  register.c  rendduh.c  rendsig.c  unload.c
src/helpers/: clickrem.c  memfile.c  resamp2.inc  resamp3.inc  resample.c  resample.inc  sampbuf.c  silence.c  stdfile.c
src/it/: itload.c  itload2.c  itmisc.c  itorder.c  itread.c  itread2.c  itrender.c  itunload.c  loadmod.c  loadmod2.c  loads3m.c  loads3m2.c  loadxm.c  loadxm2.c  readmod.c  readmod2.c  reads3m.c  reads3m2.c  readxm.c  readxm2.c  xmeffect.c
